# Launcher

.github/workflows/: main.yml
launcher/: Application.cpp  Application.h  BaseInstance.h  CMakeLists.txt  LaunchController.cpp  LaunchController.h
launcher/minecraft/: MinecraftInstance.cpp
launcher/minecraft/launch/: InjectAuthlib.cpp
libraries/libnbtplusplus/: CMakeLists.txt
libraries/libnbtplusplus/include/: tag_array.h  tag_list.h
libraries/libnbtplusplus/src/: tag_array.cpp
libraries/quazip/: CMakeLists.txt
libraries/quazip/quazip/: JlCompress.cpp  JlCompress.h
libraries/quazip/qztest/: qztest.cpp  qztest.h  testjlcompress.cpp  testjlcompress.h  testquachecksum32.cpp  testquachecksum32.h  testquagzipfile.cpp  testquagzipfile.h  testquaziodevice.cpp  testquaziodevice.h  testquazip.cpp  testquazip.h  testquazipdir.cpp  testquazipdir.h  testquazipfile.cpp  testquazipfile.h  testquazipfileinfo.cpp  testquazipnewinfo.cpp
